--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ dependencies{
 	compile "com.googlecode.json-simple:json-simple:1.1.1"
 	compile "com.github.sarxos:webcam-capture:0.3.11"
 	compile "com.google.zxing:javase:3.3.1"
-
+	compile "org.web3j:core:3.1.1"
 }
 
 
