--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies{
 	compile "com.github.sarxos:webcam-capture:0.3.11"
 	compile "com.google.zxing:javase:3.3.1"
 	compile "org.web3j:core:3.1.1"
+	testImplementation 'junit:junit:4.12'
 }
 
 
