got rid of the default package

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ jar{
 	version = '0.1.0'
 
 	manifest{
-		attributes("Main-Class":"MinerControllerApplication")
+		attributes("Main-Class":"com.isaiahminer.MinerControllerApplication")
 	}
 }
 
@@ -41,7 +41,7 @@ task fatJar(type: Jar) {
 	manifest {
 		attributes('Implementation-Title': 'Isaiah Miner',
         		'Implementation-Version': version,
-        		'Main-Class': 'MinerControllerApplication')
+        		'Main-Class': 'com.isaiahminer.MinerControllerApplication')
 	}
 	exclude(['Claymore/**'])
 	exclude(['bash/**'])
