Proper exception handling

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   //id 'eu.appsatori.fatjar'
   id 'java'
   id 'application'
+  id 'eclipse'
 }
 
 mainClassName = 'MinerControllerApplication'
